package Memento.entities;

public enum MediaType {
    PHOTO,
    VIDEO
}

