package Memento.entities;

public enum ReactionType {
    HEART,
    THUMBS_UP,
    LAUGH,
    SURPRISED,
    SAD,
    COURAGE
}

