package Memento.entities;

public enum RelationshipType {
    FRIEND,
    FAMILY,
    BOTH
}

