package Memento.entities;

public enum RequestStatus {
    PENDING,
    ACCEPTED,
    REJECTED
}

