package Memento.entities;

public enum StoryType {
    PHOTO,
    VIDEO
}

