package Memento.entities;

public enum Visibility {
    FRIENDS,
    FAMILY,
    BOTH,
    PUBLIC
}
